# screener-ai

./: .env.example  .gitignore  CLAUDE.md  CODE_AUDIT_SUMMARY.md  DESIGN.md  REQUIREMENTS.md  TASKS.md  test_indian_api_integration.mjs
.github/workflows/: .env.example  backfill_mf_navs.yml  compute_mf_metrics.yml  daily_pipeline.yml  generate_analyses.yml  weekly_fundamentals.yml
backend/: cache.py  config.py  database.py  main.py  pyproject.toml  requirements.txt
backend/dependencies/: auth.py
backend/routers/: __init__.py  ai.py  auth.py  compare.py  mf.py  portfolio.py  stocks.py
backend/schemas/: stock_schemas.py
backend/services/: ai_service.py
backend/tests/: test_phase5.py  test_phase7.py
frontend/: middleware.disabled.ts  middleware.ts  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  (+1 more)
pipeline/: backfill_mf_navs.py  compute_mf_metrics.py  config.py  data_processor.py  db.py  fetch_fundamentals.py  fetch_mf_details.py  fetch_mf_navs.py  fetch_news.py  fetch_prices.py  mf_metrics.py  nifty500.txt  package-lock.json  package.json  requirements.txt
pipeline/analysis/: fetch_fundamentals.mjs  fix_rls.mjs  generate_analyses.mjs  package-lock.json  package.json  prompts.mjs
pipeline/data_sources/: indian_stock_api.mjs  indian_stock_api.mjs.bak
pipeline/tests/: test_mf_metrics.py
supabase/migrations/: 002_dev_seed.sql  003_paper_trading.sql  004_stock_ai_analyses.sql  005_mf_metrics.sql  006_mf_rolling_returns.sql  007_extend_fundamentals.sql  008_add_roa_column.sql  009_cagr_periods_and_metadata.sql
(+61 files in other folders)
